--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -18,7 +18,16 @@
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-collapse collapse" style="height :">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="height :">
             <ul class="nav navbar-nav">
 
                 <li><a href="@routes.HomeController.home(id)">Home</a>
@@ -37,17 +46,17 @@
                 <li><a href="@routes.MainController.home(id)">Main</a>
                 </li>
             </ul>
-            <div class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="searchPost" action="/network/search/post/@id" method="POST">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search Post" name="srch-term" id="srch-term">
-                        <div class="input-group-btn" role="group">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            @*<div class="col-sm-3 col-md-3">*@
+                @*<form class="navbar-form" role="searchPost" action="/network/search/post/@id" method="POST">*@
+                    @*<div class="input-group">*@
+                        @*<input type="text" class="form-control" placeholder="Search Post" name="srch-term" id="srch-term">*@
+                        @*<div class="input-group-btn" role="group">*@
+                            @*<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>*@
                             @*<button class="btn btn-default" type="button"><i class="glyphicon glyphicon-list"></i></button>*@
-                        </div>
-                    </div>
-                </form>
-            </div>
+                        @*</div>*@
+                    @*</div>*@
+                @*</form>*@
+            @*</div>*@
             <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown"><a href="#"
