--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -18,7 +18,15 @@
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-collapse collapse" style="height :">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="height :">
             <ul class="nav navbar-nav">
 
                 <li><a href="@routes.HomeController.home(id)">Home</a>
@@ -26,14 +34,6 @@
                 <li><a href="@routes.ProfileController.get(id)">About</a></li>
                 <li><a href="/">Post</a></li>
                 <li><a href="@routes.CriteriaController.home(id)">Users</a></li>
-                @*<li class="dropdown"><a href="#"*@
-                @*class="dropdown-toggle" data-toggle="dropdown">Support<b*@
-                @*class="caret"></b></a>*@
-                @*<ul class="dropdown-menu">*@
-                @*<li><a href="@routes.AccountController.getServiceLog">Service Execution Log List</a></li>*@
-                @*<li><a href="@routes.AccountController.searchServiceLog">Service Execution Log Search</a></li>*@
-                @*</ul>*@
-                @*</li>*@
                 <li><a href="@routes.MainController.home(id)">Main</a>
                 </li>
             </ul>
