--- a/ApacheCMDA-Frontend/public/stylesheets/main.css
+++ b/ApacheCMDA-Frontend/public/stylesheets/main.css
@@ -20,3 +20,11 @@ border: 1px solid black;
     float:right;
     margin-top:10px
 }
+.commenter_color
+{
+    color:blue;
+}
+.comment_background
+{
+    background-color: moccasin;
+}
