--- a/ApacheCMDA-Frontend/app/views/network/searchPost.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/searchPost.scala.html
@@ -13,7 +13,7 @@ License for the specific language governing permissions and * *
 limitations under the License. *
 *******************************************************************************@
 @(user: User, userForm: play.data.Form[User], users: List[User], viewerId: String,
-		posts: List[Post], follow:Int)
+		postsAndComments: List[PostAndComments], follow:Int)
 @import util.TimeConvert
 
 
@@ -135,19 +135,101 @@ limitations under the License. *
 				<div class="col-md-8 col-xs-12" style="margin: 0px; padding: 0px;">
 						<!-- /top nav -->
 					<div class="full col-sm-12">
-						<div id="post" class="row">
-							@for(post <- posts) {
-								<div class="panel panel-default">
-									<div class="panel-body">
-										<div class="clearfix"></div>
-										@post.getAuthorName : @post.getContent
-										<hr>
-										@TimeConvert.format(post.getTimestamp) Likes:
-										@post.getNumOfLikes
+						<div id="postList">
+						@for(postAndComments <- postsAndComments) {
+							<div id="post_@postAndComments.getPost.getId" class="panel panel-default">
+								<div class="panel-body">
+									<div id="post_content_@postAndComments.getPost.getId" class="row">
+										<div class="col-sm-2 col-md-2 col-lg-2">
+											@postAndComments.getPost.getAuthorName :
+										</div>
+										<div id="post_original_content_@postAndComments.getPost.getId" class="col-sm-9 col-md-9 col-lg-9">
+										@postAndComments.getPost.getContent
+										</div>
+										<div data-value="@postAndComments.getPost.getId" class="col-sm-1 col-md-1 col-lg-1 glyphicon glyphicon-pencil cursor"></div>
+									</div>
+									<div id="post_edit_@postAndComments.getPost.getId" class="row" style="display:none">
+										<div class="col-sm-2 col-md-2 col-lg-2">
+											@postAndComments.getPost.getAuthorName :
+										</div>
+										<div class="col-sm-9 col-md-9 col-lg-9">
+											<input id="post_edit_content_@postAndComments.getPost.getId" type="text" class="form-control"
+											name="content" value="@postAndComments.getPost.getContent" aria-describedby="sizing-addon1">
+										</div>
+										<div data-value="@postAndComments.getPost.getId" class="col-sm-1 col-md-1 col-lg-1">
+											<div data-value="@postAndComments.getPost.getId" class="col-sm-1 col-md-1 col-lg-1 glyphicon glyphicon-pencil cursor"></div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-sm-12 col-md-12 col-lg-12">
+											<hr>
+										</div>
+									</div>
+									<div class="row">
+										<div id="post_likes_@postAndComments.getPost.getId" class="col-sm-2 col-md-2 col-lg-2">
+                        Likes: @postAndComments.getPost.getNumOfLikes
+                      </div>
+										<div class="col-sm-offset-7 col-md-offset-7 col-lg-offset-7 col-sm-3 col-lg-3 col-md-3 text-right">
+										@TimeConvert.format(postAndComments.getPost.getTimestamp)
+										</div>
+										<div class="col-sm-7 col-md-7 col-lg-7">
+                      </div>
+									</div>
+									<div class="row">
+										<div class="col-sm-1 col-lg-1 col-md-1">
+											<div data-value="@postAndComments.getPost.getNumOfLikes" title="@postAndComments.getPost.getId"
+											class="fa fa-thumbs-o-up fa-lg cursor" style="margin-top:15px"></div>
+										</div>
+										<div id="post_delete_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1">
+											<button data-value="@postAndComments.getPost.getId" class="btn btn-primary delete_button">Delete</button>
+										</div>
+										<div id="post_update_@postAndComments.getPost.getId" class="col-sm-offset-10 col-sm-1" style="display: none">
+											<button data-value="@postAndComments.getPost.getId" class="btn btn-primary update_button">Update</button>
+										</div>
 									</div>
 								</div>
-							}
 
+								<hr>
+								<div id="comment_@postAndComments.getPost.getId">
+								@for(comment <- postAndComments.getComments) {
+									<div class="row">
+										<div class="col-sm-2 col-md-2 col-lg-2">
+											<div class="thumbnail">
+												<img class="img-responsive user-photo"
+												src="/assets/images/comment.png">
+											</div>
+										</div>
+
+										<div class="col-sm-10 col-lg-10 col-md-10">
+											<div class="panel panel-default">
+												<div class="panel-heading">
+													<strong>@comment.getAuthorName</strong> <span class="text-muted">
+                            commented at @TimeConvert.format(comment.getTimeStamp)</span>
+												</div>
+												<div class="panel-body">
+												@comment.getContent
+												</div>
+											</div>
+										</div>
+									</div>
+									<hr>
+									}
+								</div>
+								<div class="row">
+									<div class="panel-body">
+										<input type="text" id="userComment_@postAndComments.getPost.getId" class="form-control input-sm chat-input"
+										placeholder="Write your comment here..." />
+
+										<hr>
+										<div class="input-group-btn col-sm-offset-10 col-md-offset-10 col-lg-offset-10 col-md-2 col-lg-2 col-sm-2">
+											<button data-value="@postAndComments.getPost.getId" class="btn btn-primary btn-sm">
+												<span class="glyphicon glyphicon-comment"></span>Add Comment</button>
+										</div>
+									</div>
+								</div>
+
+							</div>
+						}
 						</div>
 						<div id="followers" class="panel"
 						style="color: black; display: none">
